--- a/PlaceWallet/appsettings.json
+++ b/PlaceWallet/appsettings.json
@@ -1,6 +1,7 @@
-﻿{
+{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-PlaceWallet-77F5555E-AFD1-4335-9CFD-0756DD557CEB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-PlaceWallet-77F5555E-AFD1-4335-9CFD-0756DD557CEB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "PlaceWalletContext": "Server=(localdb)\\mssqllocaldb;Database=PlaceWalletContext-376f984b-3d9d-40e7-80f2-a601d90013b1;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
